# glowing-octo-guacamo

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  themes.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: download.rs  main.rs
src/components/: DownloadManager.vue
