[package]
name = "my_pretty_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.4", features = ["api-all"] }
tokio = { version = "1.25", features = ["full"] }
tokio-util = { version = "0.7", features = ["sync"] }
reqwest = { version = "0.11", features = ["stream", "json", "gzip"] }
reqwest-retry = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
